# UR_Mega_Project

./: .gitignore  README.md  color_params.yaml
src/color_square_detector/: CMakeLists.txt  package.xml
src/color_square_detector/src/: detector_node.cpp
src/ur5e_controller/: package.xml  setup.cfg  setup.py
src/ur5e_controller/config/: fastdds_tablet.xml
src/ur5e_controller/launch/: cube_pointer.launch.py
src/ur5e_controller/ur5e_controller/: cube_pointer_node.py  home_position.py
